[metadata]
name = fdrtd
version = 0.1.6
author = bytes for life GmbH
author_email = support@fdrtd.com
description = Python client for the fdrtd API
url = https://github.com/fdrtd/client-python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    Intended Audience :: Legal Industry
    Intended Audience :: Science/Research
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    certifi
    chardet
    idna
    requests
    urllib3
packages = find:
